[tool.poetry]
name = "rsshub-zhihu-helper"
version = "0.0.1"
description = "配合 RSS，收集用户动态 feed，生成 OPML"
authors = ["laike9m <laike9m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.6 3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
