[tool.poetry]
name = "rsshub-zhihu-helper"
version = "0.0.1"
description = "配合 RSS，收集用户动态 feed，生成 OPML"
authors = ["laike9m <laike9m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pyppeteer = "0.0.25"
fastapi = "^0.47.1"
aiofiles = "^0.4.0"
uvicorn = "^0.11.2"

[tool.poetry.dev-dependencies]

[tool.pylint.messages_control]
disable = """
bad-continuation,attribute-defined-outside-init,W0511,R0902,R0913,W0622,C0116,C0103,
R0903,W0631,W0212,W0603,R1710,R0201
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
